<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.pedrazzani.android.scorekeepersoccer.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_gap"
        android:onClick="buttonReset"
        android:text="@string/reset_label_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamTitleStyle"
                android:text="@string/teamA_text_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_gap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="@dimen/activity_image_xy"
                    android:layout_height="@dimen/activity_image_xy"
                    android:contentDescription="@string/gol"
                    app:srcCompat="@drawable/futebol_gol" />

                <TextView
                    android:id="@+id/teamA_gol"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="@dimen/activity_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_gap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/activity_image_xy"
                    android:layout_height="@dimen/activity_image_xy"
                    android:contentDescription="@string/falta"
                    app:srcCompat="@drawable/futebol_falta" />

                <TextView
                    android:id="@+id/teamA_falta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_gap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/activity_image_xy"
                    android:layout_height="@dimen/activity_image_xy"
                    android:contentDescription="@string/cart_amar"
                    app:srcCompat="@drawable/futebol_cartao_amarelo" />

                <TextView
                    android:id="@+id/teamA_ca"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_gap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/activity_image_xy"
                    android:layout_height="@dimen/activity_image_xy"
                    android:contentDescription="@string/cart_verm"
                    app:srcCompat="@drawable/futebol_cartao_vermelho" />

                <TextView
                    android:id="@+id/teamA_cv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <Button
                android:id="@+id/gol_team_a"
                style="@style/ButtonStyle"
                android:onClick="addGolTeamA"
                android:text="@string/gol" />

            <Button
                android:id="@+id/falta_team_a"
                style="@style/ButtonStyle"
                android:onClick="addFaltaTeamA"
                android:text="@string/falta" />

            <Button
                android:id="@+id/cart_amar_team_a"
                style="@style/ButtonStyle"
                android:onClick="addAmareloTeamA"
                android:text="@string/cart_amar" />

            <Button
                android:id="@+id/cart_verm_team_a"
                style="@style/ButtonStyle"
                android:onClick="addVermelhoTeamA"
                android:text="@string/cart_verm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamTitleStyle"
                android:text="@string/teamB_text_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_gap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="@dimen/activity_image_xy"
                    android:layout_height="@dimen/activity_image_xy"
                    android:contentDescription="@string/gol"
                    app:srcCompat="@drawable/futebol_gol" />

                <TextView
                    android:id="@+id/teamB_gol"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="@dimen/activity_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_gap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="@dimen/activity_image_xy"
                    android:layout_height="@dimen/activity_image_xy"
                    android:contentDescription="@string/falta"
                    app:srcCompat="@drawable/futebol_falta" />

                <TextView
                    android:id="@+id/teamB_falta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_gap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="@dimen/activity_image_xy"
                    android:layout_height="@dimen/activity_image_xy"
                    android:contentDescription="@string/cart_amar"
                    app:srcCompat="@drawable/futebol_cartao_amarelo" />

                <TextView
                    android:id="@+id/teamB_ca"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_gap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="@dimen/activity_image_xy"
                    android:layout_height="@dimen/activity_image_xy"
                    android:contentDescription="@string/cart_verm"
                    app:srcCompat="@drawable/futebol_cartao_vermelho" />

                <TextView
                    android:id="@+id/teamB_cv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <Button
                android:id="@+id/gol_team_b"
                style="@style/ButtonStyle"
                android:onClick="addGolTeamB"
                android:text="@string/gol" />

            <Button
                android:id="@+id/falta_team_b"
                style="@style/ButtonStyle"
                android:onClick="addFaltaTeamB"
                android:text="@string/falta" />

            <Button
                android:id="@+id/cart_amar_team_b"
                style="@style/ButtonStyle"
                android:onClick="addAmareloTeamB"
                android:text="@string/cart_amar" />

            <Button
                android:id="@+id/cart_verm_team_b"
                style="@style/ButtonStyle"
                android:onClick="addVermelhoTeamB"
                android:text="@string/cart_verm" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
